0.4.0
 - Configurable Timeout implementation.

0.3.0
 - PoolParty#new now takes an optional block.
 
0.2.0
 - Renamed to pool_party.
 - Fixed PoolParty#shutdown for real.

0.1.1
  - Fixed ThreadPool#shutdown.

0.1.0
 - Initial version