@@ -1,8 +1,8 @@
 class PoolParty
   # Encapsulates a unit of work to be sent to the thread pool.
   class Execution
-    attr_writer :start_time, :finish_time, :value, :exception, :timed_out #:nodoc:
-    attr_reader :args, :block #:nodoc:
+    attr_writer :value, :exception #:nodoc:
+    attr_reader :args, :block, :thread #:nodoc:
     
     def initialize(args, &block) #:nodoc:
       @args = args
@@ -12,11 +12,14 @@ class PoolParty
       @value = nil
       @exception = nil
       @timed_out = false
+      @thread = nil
+      @mutex = Mutex.new
+      @join = ConditionVariable.new
     end
     
-    # When this execution began to run.
-    def start_time
-      @start_time
+    def start! #:nodoc:
+      @thread = Thread.current
+      @start_time = Time.now
     end
     
     # True if this execution has started running.
@@ -24,9 +27,16 @@ class PoolParty
       !!start_time
     end
     
-    # When this execution finished running (either cleanly or with error).
-    def finish_time
-      @finish_time
+    # When this execution began to run.
+    def start_time
+      @start_time
+    end
+    
+    def finish! #:nodoc:
+      @mutex.synchronize do
+        @finish_time = Time.now
+        @join.signal
+      end
     end
     
     # True if this execution has finished running.
@@ -34,8 +44,13 @@ class PoolParty
       !!finish_time
     end
     
-    # How long this this execution ran for (i.e. finish_time - start_time) or if it hasn't finished,
-    # how long it has been running for.
+    # When this execution finished running (either cleanly or with error).
+    def finish_time
+      @finish_time
+    end
+    
+    # How long this this execution ran for (i.e. finish_time - start_time)
+    # or if it hasn't finished, how long it has been running for.
     def duration
       if finished?
         finish_time - start_time
@@ -44,14 +59,25 @@ class PoolParty
       end
     end
     
-    # If this execution finished with an exception, it is stored here.
-    def exception
-      @exception
+    def timed_out! #:nodoc:
+      @timed_out = true
     end
     
     # True if the execution went over the timeout limit.
     def timed_out?
       !!@timed_out
+    end
+    
+    # Block until this execution has finished running. 
+    def join
+      @mutex.synchronize do
+        @join.wait(@mutex) unless finished?
+      end
+    end
+    
+    # If this execution finished with an exception, it is stored here.
+    def exception
+      @exception
     end
     
     # The value returned by the execution's code block.
